# optics-framework

./: .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  README.md  dev_requirements.txt  hello.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.toml  sitemap.xml  sonar-project.properties
.github/workflows/: cflite_pr.yml  codeql.yml  greetings.yml  precommit_main.yml  publish_docs.yml  pypi-publish.yml  scorecard.yml  tests.yml
Docker/: deployment.md  docker-compose.yml
Docker/dev/: Dockerfile
Docker/prod/: Dockerfile
api_reference/: index.html
api_reference/action_keywords/: index.html
api_reference/app_management/: index.html
api_reference/flow_control/: index.html
api_reference/optics/: index.html
api_reference/verification/: index.html
architecture/: index.html
architecture/api_layer/: index.html
architecture/cli_layer/: index.html
architecture/components/: index.html
architecture/decisions/: index.html
architecture/engines/: index.html
architecture/error_handling/: index.html
architecture/event_system/: index.html
architecture/execution/: index.html
architecture/extending/: index.html
architecture/library_layer/: index.html
architecture/logging/: index.html
architecture/strategies/: index.html
autocompletion/: optics_completion.sh  optics_completion.zsh
configuration/: index.html
contribution/code_of_conduct/: index.html
contribution/contributing_guidelines/: index.html
contribution/developer_guide/: index.html
contribution/help_wanted/: index.html
docs/: api_reference.md  configuration.md  index.md  prerequisites.md  quickstart.md  user_workflow.md
docs/architecture/: cli_layer.md  components.md  library_layer.md  mcp_layer.md
docs/contribution/: help_wanted.md  stateless_api_design.md
docs/usage/: CLI_usage.md  MCP_usage.md  REST_API_usage.md  error_detection.md  keyword_usage.md  library_usage.md  live_usage.md  mcp_usage.md  robot_usage.md  supervisor_usage.md  tv_drivers.md  usage.md
introduction/: index.html
optics_framework/: optics.py
optics_framework/api/: action_keyword.py  app_management.py  flow_control.py  verifier.py
optics_framework/common/: Html_eventhandler.py  Junit_eventhandler.py  ai_self_heal.py  config_handler.py  device_config.py  driver_interface.py  dry_run.py  elementsource_interface.py  error.py  error_detection.py  events.py  execution.py  expose_api.py  exposed_api_sync.py  llm_interface.py  logging_config.py  models.py  nl_agent.py  optics_builder.py  report_template.html  session_manager.py  session_store_redis.py  (+4 more)
quickstart/: index.html
scripts/: sonar-local.sh
search/: search_index.json
tests/: conftest.py
user_workflow/: index.html
(+204 files in other folders)
