[tool.poetry]
name = "optics-framework"
version = "1.8.7-beta.2"
description = "A flexible and modular test automation framework that can be used to automate any mobile application."
authors = ["Lalitanand Dandge <lalit@mozark.ai>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["test automation", "framework", "mobile automation"]
homepage = "https://github.com/mozarkai/optics-framework"
repository = "https://github.com/mozarkai/optics-framework"
documentation = "https://mozarkai.github.io/optics-framework/"
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.12",
	"License :: OSI Approved :: Apache Software License",
	"Operating System :: OS Independent",
	"Intended Audience :: Developers",
	"Topic :: Software Development :: Testing",
]
include = [
	"optics_framework/py.typed"
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
typing_extensions = ">=4.13.0"
pandas = ">=2.2.3,<4.0.0"
pyyaml = "^6.0.2"
lxml = ">=5.3.1,<7.0.0"
fuzzywuzzy = "^0.18.0"
opencv-python = "^4.11.0.86"
python-levenshtein = "^0.27.1"
prompt-toolkit = "^3.0.50"
rich = ">=13.9.4,<15.0.0"
python-json-logger = ">=3.3,<5.0"
sse-starlette = ">=2.2.1,<4.0.0"
# Ceiling lifted past 0.119 so the optional `mcp` extra (fastmcp) can resolve:
# fastmcp pulls starlette>=1.0, which FastAPI only supports from 0.119 onward.
fastapi = ">=0.115.12,<0.138.0"
requests = "^2.32.3"
textual = ">=3,<7"
pytest = "^9.0.0"
pydantic = "^2.11.2"
scikit-image = "^0.25.2"
uvicorn = ">=0.35,<0.43"
jsonpath-ng = "^1.7.0"
beautifulsoup4 = "^4.12"
google-genai = { version = ">=2.0.0,<3.0.0", optional = true }
# >=3.4.2: earlier 3.4.x omit the starlette>=1.0 pin, letting the resolver keep
# starlette 0.48 (a combo fastmcp's own code is incompatible with at runtime).
fastmcp = { version = ">=3.4.2,<4.0.0", optional = true }

[tool.poetry.extras]
llm = ["google-genai"]
mcp = ["fastmcp"]

[tool.poetry.group.dev.dependencies]
tox = ">=4.24.1,<4.31.0"
pytest = "^9.0.0"
pytest-cov = ">=6.0,<7.1"
commitizen = "^4.4.1"
pre-commit = "^4.2.0"
ruff = ">=0.11.2,<0.15.0"
bandit = "^1.8.3"
pylint = ">=3.3.7,<5.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.0"
pytest-cov = ">=6.0,<7.1"
pytest-mock = ">=3.14,<3.16"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.6.11"
mkdocstrings = {extras = ["python"], version = "^1.0.2"}
mkdocs-minify-plugin = "^0.8.0"


[tool.poetry.scripts]
optics = "optics_framework.helper.cli:main"

[tool.pylint.main]
disable = ["C0114", "C0115", "C0116"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
